--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
+    "app-root-path": "0.0.1",
     "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "hjs": "~0.0.6",
-    "q": "^1.0.1",
-    "express-session": "^1.2.1",
     "connect-mongo": "^0.4.1",
-    "mongoose": "^3.8.12"
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
+    "express": "~4.2.0",
+    "express-session": "^1.2.1",
+    "hjs": "~0.0.6",
+    "mongoose": "^3.8.12",
+    "morgan": "~1.0.0",
+    "q": "^1.0.1",
+    "static-favicon": "~1.0.0"
   }
 }
