--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "express": "~4.2.0",
     "express-session": "^1.2.1",
     "hjs": "~0.0.6",
+    "lodash": "^2.4.1",
     "mongoose": "^3.8.12",
     "morgan": "~1.0.0",
     "q": "^1.0.1",
+    "request": "^2.40.0",
     "static-favicon": "~1.0.0"
   }
 }
